# decimal-scaled

./: .gitignore  .gitmessage  AGENTS.md  ALGORITHMS.md  CHANGELOG.md  CONTRIBUTORS.md  Cargo.toml  FOLLOWUPS.md  LICENSE-APACHE  LICENSE-THIRD-PARTY  OVERRIDE_POLICY.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  build.rs  fixlist.txt  mkdocs.yml  rust-analyzer.toml  tarpaulin.toml  tmp_hoist.py  tmp_wire.py
.claude-plugin/: plugin.json
.github/: CODEOWNERS  dependabot.yml
LICENSES/: MIT.md  THIRD-PARTY.md
bench-compare/: Cargo.toml  summarise.py
bench-compare/benches/: compare_common.rs  compare_d115.rs  compare_d1232.rs  compare_d153.rs  compare_d18.rs  compare_d230.rs  compare_d307.rs  compare_d38.rs  compare_d462.rs  compare_d57.rs  compare_d616.rs  compare_d76.rs  compare_d924.rs  lib_compare.rs
bench-compare/examples/: div_probe.rs  ln_probe.rs  mul_probe.rs
bench-history/: Cargo.toml  summarise_history.py
bench-history/benches/: comparison.rs
bench-history/examples/: probe.rs
benches/: ab_microbench.rs  agm_vs_taylor.rs  agm_vs_taylor_d1232.rs  agm_vs_taylor_d230.rs  agm_vs_taylor_d616.rs  agm_vs_taylor_d924.rs  all_functions.rs  atan_inputs.rs  d1232_lookup_baseline.rs  d128_mul_div_paths.rs  d153_s76.rs  d38_s33_log10_micro.rs  d57_s20.rs  d616_lookup_baseline.rs  d616_s308.rs  d76_s6.rs  d924_lookup_baseline.rs  d924_s460.rs  d_w128_mul_div_paths.rs  decimal_backends.rs  full_matrix.rs  full_matrix_common.rs  full_matrix_d114.rs  full_matrix_d115.rs  full_matrix_d1231.rs  full_matrix_d1232.rs  full_matrix_d153.rs  full_matrix_d18.rs  full_matrix_d230.rs  full_matrix_d307.rs  full_matrix_d38.rs  full_matrix_d461.rs  full_matrix_d462.rs  full_matrix_d56.rs  full_matrix_d57.rs  full_matrix_d615.rs  full_matrix_d616.rs  full_matrix_d76.rs  full_matrix_d9.rs  full_matrix_d923.rs  (+35 more)
decimal-scale-test/: Cargo.toml  README.md
decimal-scale-test/benches/: add_history_ab.rs
decimal-scale-test/src/: history.rs  lib.rs
decimal-scale-test/tests/: golden.rs  golden_proof.rs  history.rs  nightly_cross_scale.rs  proptest_identities.rs
decimal-scale-test/tests/api/: arithmetic.rs  bitwise.rs  constants.rs  conversions.rs  cross_scale.rs  display.rs  dyn_facade.rs  equalities.rs  errors.rs  fast_surface.rs  foundation.rs  int_methods.rs  main.rs  num_traits.rs  parsing.rs  pow.rs  proc_macro.rs  rescale.rs  serde.rs  tiers.rs  traits.rs  trig.rs
decimal-scale-test/tests/common/: mod.rs
decimal-scale-test/tests/contracts/: boundaries.rs  main.rs  mode_delegation.rs  overflow.rs  routing.rs
decimal-scale-test/tests/regressions/: ln_lookup_bands.rs  main.rs  max_scale.rs  powf_integer.rs
decimal-scale-test/tmp_stripe0/: results.tsv  summary.txt
decimal-scale-test/tmp_stripe_chk/: results.tsv  summary.txt
decimal-scaled-cells/: Cargo.toml
decimal-scaled-cells/src/: history.rs  lib.rs
decimal-scaled-golden/: ARCHITECTURE.md  Cargo.toml  RADIX_FINDINGS.md  README.md
decimal-scaled-golden/golden/: acos.txt  acosh.txt  add.au  add.golden  add.txt  asin.txt  asinh.txt  atan.txt  atanh.txt  cos.txt  cosh.txt  div.au  div.golden  div.txt  exp.txt  hypot.golden  hypot.txt  ln.txt  log.golden  log.txt  log10.txt  log2.txt  mul.au  mul.golden  mul.txt  rem.golden  rem.txt  sin.txt  sinh.txt  sqrt.txt  sub.au  sub.golden  sub.txt  tan.txt  tanh.txt
decimal-scaled-golden/lead/: acos.pb  acosh.pb  add.pb  asin.pb  asinh.pb  atan2.pb  atanh.pb  cbrt.pb  exp.pb  exp2.pb  hypot.pb  ln.pb  log.pb  log2.pb  mul.pb  rem.pb  sin.pb  sinh.pb  sqrt.pb  tan.pb  tanh.pb
decimal-scaled-golden/oracle/: README.md  exactness.py  functions.py  generate.py  harvest.py  oracle.py  oracles.json  requirements-extra.txt  requirements.txt
decimal-scaled-golden/oracle/adapters/: decimal_oracle.py  flint_oracle.py  fraction_oracle.py  mpfr_oracle.py  mpmath_oracle.py  sympy_oracle.py
decimal-scaled-golden/src/: bigdec.rs  caseloader.rs  collator.rs  collector.rs  computed.rs  execution.rs  function.rs  lib.rs  loader.rs  outcome.rs  overflow.rs  parser.rs  rounding.rs  subject.rs  tester.rs  validate.rs  validator.rs  value.rs
decimal-scaled-golden/src/execution/: criterion_strategy.rs  mod.rs  run_once.rs  strategy.rs  timed.rs
decimal-scaled-golden/src/loader/: file.rs  filter.rs  loader.rs  mod.rs  radix.rs  url.rs  value.rs
decimal-scaled-golden/src/reporting/: inline.rs  mod.rs  reporting.rs  tsv.rs
decimal-scaled-golden/src/runner/: mod.rs  parallel.rs  runner.rs  sequential.rs  series.rs
decimal-scaled-golden/src/subject/: capabilities.rs  computed.rs  limits.rs  mod.rs  overflow.rs  subject.rs
decimal-scaled-golden/src/support/: collector.rs  function.rs  mod.rs  outcome.rs  rounding.rs  string_decimal.rs
decimal-scaled-golden/src/validators/: mod.rs  overflow.rs  precision.rs  rounding.rs  validator.rs
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTORS.md  README.md  ROADMAP.md  SECURITY.md  benchmarks.md  benchmarks.md.draft  comparisons.md  conversions.md  cross-scale.md  features.md  getting-started.md  glossary.md  golden.md  guides.md  history.md  index.md  licensing.md  macros.md  performance.md  precision-testing.md  precision.md  reference.md  rounding.md  serde.md  strict-mode.md  widths.md
examples/: agm_mpmath_validate.rs  atan_probe.rs  chart_gen.rs  divbench.rs  expbench.rs  fast_vs_strict_ulp.rs  hyper_recover.rs  int_div_probe.rs  karabench.rs  karabench_u64.rs  ln_probe.rs  mul_toom3_probe.rs  profile_atan_perfetto.rs  profile_exp.rs  profile_exp_perfetto.rs  profile_rescale.rs  rounding_mode_probe.rs  sqrtbench.rs  test_pi.rs  ulp_report.rs  wide_tang_bench.rs
golden-competitors/: Cargo.toml
golden-competitors/src/: lib.rs
golden-competitors/tests/: competitors_proof.rs  lib_perf.rs
golden-ds/: Cargo.toml
golden-ds/src/: lib.rs
golden-ds/tests/: golden_multi.rs  golden_proof.rs
macros/: Cargo.toml  README.md
macros/src/: lib.rs
phase4/: RULES.md  algo_catalog.md  matcher_design.md  migration_explog.md  migration_limbs.md  migration_roots.md  migration_trig.md
scripts/: bench_compare.py  bench_log_to_medians.py  (+36 more)
(+2486 files in other folders)
